fixed FAQ content padding on small screens

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -170,7 +170,7 @@ li {
     }
     .card-body {
        
-        padding: 2rem 4rem 1rem;     
+        padding: 1rem 2rem 1rem;     
          background-color: rgba(255, 255, 255, .9);
       }
   }
